CAMBIO FUENTES COLOR AZUL OSCURO

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ body {
     height: 100%;
     font-family: 'Montserrat', sans-serif;
     background: #ffffff;
-    color: #111;
+    color: #1E2D3B;
 }
 
 /* =========================================================
